tests/snapshots/run_wpt_conformance__onnx_logicalAnd_uint8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_and.https.any.js",
    "logicalAnd uint8 4D tensors",
    "onnx",
    "PASS",
)
